--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,17 @@
         <!--把该属性改为false即可使menu位置位于toolbar之下-->
         <item name="overlapAnchor">false</item>
     </style>
+
+
+    <style name="drawer_menu">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:clickable">true</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
 </resources>
