--- a/app/src/main/res/layout/layout_base_root.xml
+++ b/app/src/main/res/layout/layout_base_root.xml
@@ -26,6 +26,10 @@
             app:titleTextColor="@color/white">
 
             <TextView
+                android:layout_marginEnd="30dp"
+                android:ellipsize="marquee"
+                android:gravity="center"
+                android:singleLine="true"
                 android:id="@+id/base_root_title_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
