--- a/app/src/main/res/layout/activity_login_paly_android.xml
+++ b/app/src/main/res/layout/activity_login_paly_android.xml
@@ -25,7 +25,7 @@
             android:layout_gravity="center">
 
             <EditText
-                android:id="@+id/tv_account"
+                android:id="@+id/tv_user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -54,7 +54,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_account" />
+                app:layout_constraintTop_toBottomOf="@id/tv_user_name" />
 
             <EditText
                 android:id="@+id/tv_password"
