--- a/app/src/main/res/layout/activity_login_paly_android.xml
+++ b/app/src/main/res/layout/activity_login_paly_android.xml
@@ -7,11 +7,10 @@
     android:background="@mipmap/bg_login">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/card_view"
         android:layout_width="300dp"
         android:layout_height="150dp"
         android:layout_marginTop="90dp"
-        android:translationZ="5dp"
         app:cardBackgroundColor="#745d83"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +100,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+        app:layout_constraintTop_toBottomOf="@+id/card_view" />
 
     <Button
         android:id="@+id/btn_register"
@@ -124,8 +123,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/bg_login_progress"
-        app:layout_constraintBottom_toBottomOf="@+id/cardView"
+        app:layout_constraintBottom_toBottomOf="@+id/card_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/cardView" />
+        app:layout_constraintTop_toTopOf="@+id/card_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
