--- a/app/src/main/res/layout/activity_login_paly_android.xml
+++ b/app/src/main/res/layout/activity_login_paly_android.xml
@@ -44,6 +44,7 @@
                     android:ems="20"
                     android:hint="account"
                     android:inputType="textPersonName"
+                    android:text="286305974@qq.com"
                     android:textSize="20sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -82,6 +83,7 @@
                     android:ems="10"
                     android:hint="password"
                     android:inputType="textPassword"
+                    android:text="123456"
                     android:textSize="20sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
