--- a/app/src/main/res/layout/layout_base_root.xml
+++ b/app/src/main/res/layout/layout_base_root.xml
@@ -52,7 +52,7 @@
 
         <LinearLayout
             android:id="@+id/content_layout_ll"
-            android:layout_width="360dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/base_root_bottom_layout_ll"
