--- a/app/src/main/res/layout/recommend_daily_vh_article_list.xml
+++ b/app/src/main/res/layout/recommend_daily_vh_article_list.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_knowledge_point"
+        android:id="@+id/rv_article"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
