--- a/app/src/main/res/layout/recommend_daily_vh_article_list_item.xml
+++ b/app/src/main/res/layout/recommend_daily_vh_article_list_item.xml
@@ -2,19 +2,19 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="3dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginEnd="3dp"
-    android:layout_marginBottom="3dp">
+    android:layout_height="150dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginEnd="5dp"
+    app:cardCornerRadius="5dp">
 
     <TextView
-        android:id="@+id/tv_point"
+        android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
-        android:lines="1"
-        android:text=""
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:textColor="@color/black"
-        android:textSize="18sp" />
+        android:textSize="20sp" />
 </androidx.cardview.widget.CardView>
