--- a/app/src/main/res/layout/play_android_item_knowledge_point.xml
+++ b/app/src/main/res/layout/play_android_item_knowledge_point.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="3dp"
+    android:layout_marginStart="7dp"
     android:layout_marginTop="10dp"
-    android:layout_marginEnd="3dp"
+    android:layout_marginEnd="7dp"
     android:layout_marginBottom="3dp">
 
     <TextView
+        android:padding="5dp"
         android:id="@+id/tv_point"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:lines="1"
         android:text=""
         android:textColor="@color/black"
-        android:textSize="18sp" />
+        android:textSize="14sp" />
 </androidx.cardview.widget.CardView>
