--- a/app/src/main/res/layout/fragment_base_list.xml
+++ b/app/src/main/res/layout/fragment_base_list.xml
@@ -42,6 +42,7 @@
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
     <TextView
+        android:visibility="invisible"
         android:id="@+id/base_pager_list_empty_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
