--- a/app/src/main/res/layout/layout_base_list.xml
+++ b/app/src/main/res/layout/layout_base_list.xml
@@ -52,7 +52,7 @@
         android:gravity="center"
         android:text="列表为空"
         android:textSize="30sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
