增加 每日推荐页面：主菜单跳转； 优化 链式代码自动换行、代码格式化

--- a/app/src/main/res/layout/recommend_daily_vh_menu.xml
+++ b/app/src/main/res/layout/recommend_daily_vh_menu.xml
@@ -75,7 +75,7 @@
         android:id="@+id/tv_daily_recommend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="每日推荐"
+        android:text="推荐音乐"
         app:layout_constraintEnd_toEndOf="@id/ib_daily_recommend"
         app:layout_constraintStart_toStartOf="@id/ib_daily_recommend"
         app:layout_constraintTop_toTopOf="@+id/tv_play_android" />
