增加 每日推荐页面：福利item增加共享动画

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -61,4 +61,9 @@
         <item name="android:paddingStart">10dp</item>
         <item name="android:background">?attr/selectableItemBackground</item>
     </style>
+
+    <!--允许共享动画-->
+    <style name="TransitionsTheme" parent="AppTheme">
+        <item name="android:windowContentTransitions">true</item>
+    </style>
 </resources>
