--- a/app/src/main/res/layout/recommend_daily_vh_photo_list_item.xml
+++ b/app/src/main/res/layout/recommend_daily_vh_photo_list_item.xml
@@ -6,6 +6,7 @@
     android:layout_margin="5dp">
 
     <ImageView
+        android:transitionName="translation_img"
         android:id="@+id/iv_welfare"
         android:scaleType="centerCrop"
         android:layout_width="match_parent"
