--- a/app/src/main/res/layout/header_play_android.xml
+++ b/app/src/main/res/layout/header_play_android.xml
@@ -5,12 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.youth.banner.Banner
+    <com.loomis.banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="180dp"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent" />
 
-    </com.youth.banner.Banner>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
