--- a/app/src/main/res/layout/activity_big_image.xml
+++ b/app/src/main/res/layout/activity_big_image.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black"
-    android:gravity="center">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@color/black">
 
     <com.loomis.banner.BannerNotCircle
         android:id="@+id/banner"
+        app:image_scale_type="center_crop"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:transitionName="translation_img" />
+        android:transitionName="translation_img"/>
 
 </LinearLayout>
