--- a/app/src/main/res/layout/recommend_custom_title_vh.xml
+++ b/app/src/main/res/layout/recommend_custom_title_vh.xml
@@ -11,21 +11,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="全部"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_goneMarginStart="10dp" />
 
-    <TextView
-        android:id="@+id/tv_choose_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="10dp"
-        android:text="选择分类"
-        app:layout_constraintBaseline_toBaselineOf="@id/tv_type"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@id/tv_type" />
 </androidx.constraintlayout.widget.ConstraintLayout>
