--- a/app/src/main/res/layout/movie_hit_vh_item.xml
+++ b/app/src/main/res/layout/movie_hit_vh_item.xml
@@ -3,20 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginTop="5dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp">
 
     <ImageView
-android:layout_marginStart="8dp"
+        android:transitionName="movie_detail"
+        android:id="@+id/iv_posters"
         android:layout_width="90dp"
         android:layout_height="127dp"
-        android:scaleType="fitXY"
-        android:id="@+id/iv_posters"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:scaleType="fitXY"
+        android:src="@mipmap/ic_launcher"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@mipmap/ic_launcher" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_title"
