--- a/app/src/main/res/layout/movie_detail_head.xml
+++ b/app/src/main/res/layout/movie_detail_head.xml
@@ -22,7 +22,7 @@
         android:layout_width="100dp"
         android:layout_height="150dp"
         android:layout_marginStart="32dp"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher"
         android:transitionName="movie_detail"
         app:layout_constraintBottom_toBottomOf="parent"
