增加 项目主页内容

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -66,4 +66,13 @@
     <style name="TransitionsTheme" parent="AppTheme">
         <item name="android:windowContentTransitions">true</item>
     </style>
+
+    <style name="CollapsingToolbarExpandedStyle" >
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="CollapsingToolbarCollapsedStyle" >
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
