--- a/app/src/main/res/layout/project_home_activity.xml
+++ b/app/src/main/res/layout/project_home_activity.xml
@@ -18,7 +18,7 @@
             app:collapsedTitleTextAppearance="@style/CollapsingToolbarCollapsedStyle"
             app:contentScrim="@color/tool_bar_base_background"
             app:expandedTitleTextAppearance="@style/CollapsingToolbarExpandedStyle"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
             app:statusBarScrim="@color/tool_bar_base_background"
             app:title="项目主页"
             app:titleEnabled="true">
@@ -32,7 +32,6 @@
                 app:layout_collapseMode="parallax" />
 
             <androidx.appcompat.widget.Toolbar
-
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
